# vibejet

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.agents/skills/: skill-rules.json
.agents/skills/_shared/: ui-planning-contract.md  vj-skill-conventions.md
.agents/skills/api-design/: SKILL.md  api-design.template.md
.agents/skills/architecture/: SKILL.md  architecture.template.md
.agents/skills/backend-dev-guidelines/: SKILL.md
.agents/skills/codex-review/: SKILL.md
.agents/skills/data-model/: SKILL.md  data-model.template.md
.agents/skills/design-md-matcher/: SKILL.md
.agents/skills/diff-aware-qa/: SKILL.md
.agents/skills/do-story/: SKILL.md
.agents/skills/epic-story-generator/: README.md  SKILL.md  epic-story.template.md  kanban_board.template.md
.agents/skills/feature/: SKILL.md
.agents/skills/frontend-dev-guidelines/: SKILL.md
.agents/skills/prd-generator-ears/: SKILL.md  prd_template.md
.agents/skills/product-requirements/: SKILL.md
.agents/skills/reference-impl/: SKILL.md
.agents/skills/review/: SKILL.md
.claude/rules/: doc-maintenance.md  frontend.md  project-structure.md
.github/workflows/: ci.yml
backend/: .dockerignore  .flake8  Dockerfile  README.md  alembic.ini  dev.db.bak-0006  env.example  grpc_main.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260610_0001_baseline.py  20260610_0002_documents.py  20260623_0003_oauth_accounts.py  20260703_0004_conversations_owner.py  20260703_0005_file_assets_key_unique.py  20260703_0006_conversations_owner_updated_idx.py  20260704_0001_init.py
backend/api/: __init__.py  dependencies.py  docs.py
backend/api/middleware/: __init__.py  locale.py  logging.py  metrics.py  request_id.py
backend/api/routes/: auth.py  chat.py  conversations.py  documents.py  files.py  health.py  metrics.py  storage.py
backend/api/utils/: __init__.py  headers.py  idempotency.py  rate_limit.py
backend/application/: dto.py
backend/application/ports/: document_parser.py  embedding.py  idempotency.py  llm.py  oauth.py  security.py  storage.py  tool_executor.py  unit_of_work.py
backend/application/services/: auth_service.py  chat_service.py  conversation_service.py  document_service.py  file_asset_service.py  idempotency_service.py
backend/application/utils/: storage.py  time.py
backend/core/: config.py  exceptions.py  i18n.py  logging_config.py  response.py
backend/core/observability/: __init__.py  health.py  metrics.py  tracing.py
backend/domain/common/: __init__.py  entity.py  exceptions.py  repository.py  unit_of_work.py
backend/domain/conversation/: __init__.py  entity.py  exceptions.py  repository.py
backend/domain/document/: README.md  __init__.py  entity.py  exceptions.py  repository.py
backend/domain/file_asset/: __init__.py  entity.py  repository.py
backend/domain/user/: __init__.py  entity.py  oauth_account.py  repository.py  service.py
backend/grpc_app/: README.md  __init__.py  server.py
backend/grpc_app/interceptors/: authorization.py  exceptions.py  logging.py  request_id.py
backend/grpc_app/protos/forge/v1/: common.proto  profile.proto
backend/grpc_app/services/: profile_service.py
backend/infrastructure/: database.py  unit_of_work.py
backend/infrastructure/adapters/: idempotency_store.py  storage_port.py
backend/infrastructure/models/: __init__.py  base.py  conversation.py  document.py  file_asset.py  mixins.py  user.py
backend/infrastructure/repositories/: __init__.py  agent_config_repository.py  base_repository.py  conversation_repository.py  document_repository.py  file_asset_repository.py  message_repository.py  mixins.py  run_repository.py  user_repository.py
backend/infrastructure/security/: __init__.py  jwt_tokens.py  password.py
backend/infrastructure/tasks/: __init__.py  worker.py
backend/infrastructure/tasks/config/: __init__.py  beat.py  celery.py
backend/infrastructure/tasks/tasks/: __init__.py  email.py
backend/infrastructure/tasks/utils/: __init__.py  base_task.py  dispatcher.py
backend/locales/: README.md
backend/locales/en/LC_MESSAGES/: messages.po
backend/locales/zh_Hans/LC_MESSAGES/: messages.po
backend/scripts/: gen_protos.sh  validate_po.py
backend/shared/: __init__.py
backend/shared/codes/: __init__.py
backend/tests/: README.md  conftest.py  test_agent_config_repository.py  test_architecture.py  test_auth_google_service.py  test_auth_lark_service.py  test_auth_login_service.py  test_base_entity.py  test_base_repository.py  test_chat_ownership.py  test_chat_request_dto.py  test_chat_service_stream.py  test_conversation_ownership.py  test_database_engine_config.py  test_document_entity.py  test_document_ownership.py  test_document_parsers.py  test_document_repository.py  test_document_service.py  test_file_asset_confirm_upload.py  test_file_asset_relay_cleanup.py  test_file_ownership.py  test_google_code_exchanger.py  test_idempotency_presign.py  test_lark_code_exchanger.py  test_llm_anthropic_provider_tools.py  test_llm_openai_provider_tools.py  test_observability_fallback.py  test_repository_write_roundtrips.py  test_settings_config.py  test_storage_upload_stream_abort.py  test_unit_of_work.py  test_user_oauth_repository.py  test_validation_error_response.py
docs/: README.md  ai-workflow.md  architecture.md  review-checklist-python-fastapi.md  run-story-design.md  story-verify-fix-design.md  vibejet-architecture.html  vibejet.architecture.json
docs/archive/: README.md
docs/plans/: TEMPLATE.md
docs/project/: DESIGN.md  architecture.md  requirements.md
docs/project/api/: auth.md  (+6 more)
docs/reference/: README.md
docs/solutions/: README.md
docs/tasks/: README.md  kanban_board.md
frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
scripts/: README.md  check-story-result.sh  run-epic.sh
(+356 files in other folders)
