[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
  | grpc_app/generated
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["alembic/versions/*", "grpc_app/generated/*"]
known_first_party = ["api", "application", "domain", "infrastructure", "core", "shared"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = false
exclude = [
    "alembic/versions/.*\\.py$",
    "grpc_app/generated/.*\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "confluent_kafka.*",
    "aiokafka.*",
    "oss2.*",
    "boto3.*",
    "stripe.*",
    "wechatpayv3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/grpc_app/generated/*",
    "*/.venv/*",
    "*/venv/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic/versions", "grpc_app/generated"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "alembic/versions",
    "grpc_app/generated",
]
max-complexity = 10
per-file-ignores = [
    "__init__.py:F401",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibejet"
version = "1.0.0"
description = "FastAPI + DDD backend template kit for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
# Core dependencies only. Heavy/optional integrations live in
# [project.optional-dependencies] so downstream projects don't inherit them.
# Pins: lower bound = last verified version, upper bound = next major.
dependencies = [
    # Web framework
    "fastapi>=0.121.0,<1",
    "starlette>=0.49.1,<1",
    "uvicorn[standard]>=0.24.0,<1",
    "python-multipart>=0.0.27,<0.1",
    # Database (async PostgreSQL + migrations)
    "sqlalchemy>=2.0.23,<3",
    "asyncpg>=0.29.0,<1",
    "alembic>=1.13.0,<2",
    # Configuration & validation
    "python-dotenv>=1.2.2,<2",
    "pydantic[email]>=2.5.0,<3",
    "pydantic-settings>=2.1.0,<3",
    # Cache / idempotency
    "redis>=5.0.1,<7",
    # Logging
    "structlog>=23,<25",
    # HTTP client
    "httpx>=0.25.2,<1",
    "httpx-retries>=0.3,<1",
    "tenacity>=8.2.3,<10",
    # Async file IO
    "aiofiles>=23.2.1,<25",
    "anyio>=3.7.1,<5",
    # LLM (kit core capability; OpenAI-compatible providers via base_url)
    "openai>=1.0,<3",
    # Auth (JWT signing + password hashing)
    "pyjwt>=2.8,<3",
    "pwdlib[argon2]>=0.2,<1",
    # i18n
    "Babel>=2.12.0,<3",
]

[project.optional-dependencies]
# Object storage providers (loaded lazily by the storage factory)
s3 = ["boto3>=1.34.34,<2"]
oss = ["oss2>=2.19.0,<3"]
# Messaging (two alternative Kafka drivers; pick one)
kafka = ["confluent-kafka>=2.3,<3"]
aiokafka = ["aiokafka>=0.10,<1"]
# LLM providers beyond OpenAI-compatible (openrouter/litellm reuse the core openai SDK)
anthropic = ["anthropic>=0.40,<2"]
# Async task queue
celery = ["celery>=5.3.6,<6"]
# gRPC server (grpc_main.py / grpc_app)
grpc = [
    "grpcio>=1.58,<2",
    "grpcio-tools>=1.58,<2",
    "grpcio-health-checking>=1.58,<2",
    "googleapis-common-protos>=1.60,<2",
]
dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "flake8-bugbear==24.2.6",
    "flake8-comprehensions==3.14.0",
    "flake8-simplify==0.21.0",
    "mypy==1.9.0",
    "types-redis==4.6.0.20240409",
    "types-aiofiles==23.2.0.20240403",
    "bandit[toml]==1.7.8",
    "pip-audit==2.10.0",
    "pre-commit==3.7.0",
    "polib==1.2.0",
    "pytest==9.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.5.0",
    "pytest-timeout==2.3.1",
    "aiosqlite==0.20.0",
    "faker==24.4.0",
    "ipython==8.23.0",
    "ipdb==0.13.13",
    "watchdog==4.0.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.15",
]

observability = [
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.22,<2",
    "opentelemetry-sdk>=1.22,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22,<2",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0,<1",
    "opentelemetry-instrumentation-redis>=0.43b0,<1",
    "opentelemetry-instrumentation-httpx>=0.43b0,<1",
]

[project.urls]
Homepage = "https://github.com/yourusername/vibejet"
Documentation = "https://github.com/yourusername/vibejet/docs"
Repository = "https://github.com/yourusername/vibejet"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
include = [
    "api*",
    "application*",
    "core*",
    "domain*",
    "infrastructure*",
    "shared*",
    "grpc_app*",
]
exclude = [
    "tests*",
    "docs*",
    "alembic*",
    "locales*",
]
