[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
  | grpc_app/generated
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["alembic/versions/*", "grpc_app/generated/*"]
known_first_party = ["api", "application", "domain", "infrastructure", "core", "shared"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_optional = false
exclude = [
    "alembic/versions/.*\\.py$",
    "grpc_app/generated/.*\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "confluent_kafka.*",
    "aiokafka.*",
    "oss2.*",
    "boto3.*",
    "stripe.*",
    "wechatpayv3.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/grpc_app/generated/*",
    "*/.venv/*",
    "*/venv/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "alembic/versions", "grpc_app/generated"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

# flake8 配置唯一来源是 backend/.flake8（flake8 本体不读 pyproject.toml，
# 曾存在于此的 [tool.flake8] 是不生效的死配置，已删除以免双份维护漂移）

# DDD 依赖方向机器强制（AGENTS.md: API → Application → Domain ← Infrastructure）。
# 运行：uv run lint-imports（pre-commit + CI 全量执行）。
# 例外必须在 ignore_imports 显式声明并注明原因，不允许口头豁免。
[tool.importlinter]
root_packages = ["api", "application", "domain", "infrastructure", "core", "shared"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain 纯净性：不依赖 application/infrastructure/api"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["application", "infrastructure", "api"]

[[tool.importlinter.contracts]]
name = "domain 禁框架：不依赖 fastapi/sqlalchemy/redis/httpx"
type = "forbidden"
source_modules = ["domain"]
forbidden_modules = ["fastapi", "sqlalchemy", "redis", "httpx"]

[[tool.importlinter.contracts]]
name = "application 不依赖 api/infrastructure，不直接用 fastapi/sqlalchemy"
type = "forbidden"
source_modules = ["application"]
forbidden_modules = ["api", "infrastructure", "fastapi", "sqlalchemy"]
ignore_imports = [
    # 可观测性探针：OTel 对 SQLAlchemy engine 做 instrument，本职是戳基础设施，
    # 不为其凿 port（同 metrics.py 豁免理由）。application 经 core.logging_config
    # 间接触达此边，属已知且被接受的传递链
    "core.observability.tracing -> infrastructure.database",
]

# core 是共享基础层，不许反向依赖 infrastructure/application/api。
# 唯一例外：可观测性探针（OTel instrument / 健康检查），本职是戳基础设施
[[tool.importlinter.contracts]]
name = "core 不依赖 infrastructure/application/api"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["infrastructure", "application", "api"]
ignore_imports = [
    "core.observability.tracing -> infrastructure.database",
    "core.observability.health -> infrastructure.**",
]

[[tool.importlinter.contracts]]
name = "api 不直接依赖 infrastructure/sqlalchemy"
type = "forbidden"
source_modules = ["api"]
forbidden_modules = ["infrastructure", "sqlalchemy"]
ignore_imports = [
    # 组合根：AGENTS.md 认可 api/dependencies.py 装配具体基础设施实现。
    # 裸 infrastructure 与 .** 两条都需要：grimp 对 `from infrastructure.x import y`
    # 同时记录到包根的边，而 .** 不匹配包根本身
    "api.dependencies -> infrastructure",
    "api.dependencies -> infrastructure.**",
    # 基础设施探针（健康检查/指标/追踪 instrument）：本职是直接戳基础设施，
    # 无业务逻辑可隔离，不为其凿 port。metrics 只豁免它实际探测的模块，不给整包
    "api.routes.metrics -> infrastructure.database",
    "api.routes.metrics -> infrastructure.external.cache",
    "core.observability.tracing -> infrastructure.database",
    "core.observability.health -> infrastructure.**",
    "core.observability.health -> sqlalchemy",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibejet"
version = "1.0.0"
description = "FastAPI + DDD backend template kit for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
# Core dependencies only. Heavy/optional integrations live in
# [project.optional-dependencies] so downstream projects don't inherit them.
# Pins: lower bound = last verified version, upper bound = next major.
dependencies = [
    # Web framework
    "fastapi>=0.121.0,<1",
    "starlette>=0.49.1,<1",
    "uvicorn[standard]>=0.24.0,<1",
    "python-multipart>=0.0.27,<0.1",
    # Database (async PostgreSQL + migrations)
    "sqlalchemy>=2.0.23,<3",
    "asyncpg>=0.29.0,<1",
    "alembic>=1.13.0,<2",
    # Configuration & validation
    "python-dotenv>=1.2.2,<2",
    "pydantic[email]>=2.5.0,<3",
    "pydantic-settings>=2.1.0,<3",
    # Cache / idempotency
    "redis>=5.0.1,<7",
    # Logging
    "structlog>=23,<25",
    # HTTP client
    "httpx>=0.25.2,<1",
    "httpx-retries>=0.3,<1",
    "tenacity>=8.2.3,<10",
    # Async file IO
    "aiofiles>=23.2.1,<25",
    "anyio>=3.7.1,<5",
    # LLM (kit core capability; OpenAI-compatible providers via base_url)
    "openai>=1.0,<3",
    # Auth (JWT signing + password hashing)
    "pyjwt>=2.8,<3",
    "pwdlib[argon2]>=0.2,<1",
    # i18n
    "Babel>=2.12.0,<3",
    "google-auth>=2,<3",
]

[project.optional-dependencies]
# Object storage providers (loaded lazily by the storage factory)
s3 = ["boto3>=1.34.34,<2"]
oss = ["oss2>=2.19.0,<3"]
# Messaging (two alternative Kafka drivers; pick one)
kafka = ["confluent-kafka>=2.3,<3"]
aiokafka = ["aiokafka>=0.10,<1"]
# LLM providers beyond OpenAI-compatible (openrouter/litellm reuse the core openai SDK)
anthropic = ["anthropic>=0.40,<2"]
# Async task queue
celery = ["celery>=5.3.6,<6"]
# Document parsing (markitdown provider; TextIn provider only needs core httpx)
documents = ["markitdown[docx,pptx,xlsx,xls,pdf]>=0.1.3,<0.2"]
# gRPC server (grpc_main.py / grpc_app)
grpc = [
    "grpcio>=1.58,<2",
    "grpcio-tools>=1.58,<2",
    "grpcio-health-checking>=1.58,<2",
    "googleapis-common-protos>=1.60,<2",
]
dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "flake8-bugbear==24.2.6",
    "flake8-comprehensions==3.14.0",
    "flake8-simplify==0.21.0",
    "flake8-print==5.0.0",
    "import-linter==2.12",
    "mypy==1.9.0",
    "types-redis==4.6.0.20240409",
    "types-aiofiles==23.2.0.20240403",
    "bandit[toml]==1.7.8",
    "pip-audit==2.10.0",
    "pre-commit==3.7.0",
    "polib==1.2.0",
    "pytest==9.0.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.5.0",
    "pytest-timeout==2.3.1",
    "aiosqlite==0.20.0",
    "faker==24.4.0",
    "ipython==8.23.0",
    "ipdb==0.13.13",
    "watchdog==4.0.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.15",
]

observability = [
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.22,<2",
    "opentelemetry-sdk>=1.22,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22,<2",
    "opentelemetry-instrumentation-fastapi>=0.43b0,<1",
    "opentelemetry-instrumentation-sqlalchemy>=0.43b0,<1",
    "opentelemetry-instrumentation-redis>=0.43b0,<1",
    "opentelemetry-instrumentation-httpx>=0.43b0,<1",
]

[project.urls]
Homepage = "https://github.com/yourusername/vibejet"
Documentation = "https://github.com/yourusername/vibejet/docs"
Repository = "https://github.com/yourusername/vibejet"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.setuptools.packages.find]
include = [
    "api*",
    "application*",
    "core*",
    "domain*",
    "infrastructure*",
    "shared*",
    "grpc_app*",
]
exclude = [
    "tests*",
    "docs*",
    "alembic*",
    "locales*",
]
